OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c.object
<CustomObject>
    <description>Record that tracks a specific training requirement assignment for a Contact, linked to Onboarding. Created from Vendor Training Requirements, LearnUpon Enrollments, or External Credentials. Serves as the master record for training progress and completion across systems. Example: When Contact &quot;Jane Smith&quot; is onboarded for Vendor Program &quot;Verizon Fios D2D&quot; that requires &quot;OSHA Safety Training&quot; (Training_Requirement__c), a Training_Assignment record is created with Contact__c=&quot;Jane Smith&quot;, Training_Requirement__c=&quot;OSHA Safety Training&quot;, and Status__c=&quot;Not Started&quot;. If the training system (e.g., LearnUpon) has API integration, the system can automatically sync completion status, updating Status__c to &quot;Complete&quot; when Jane finishes the course. This enables tracking of training completion as part of onboarding requirement fulfillment.</description>
    <label>Training Assignment</label>
    <nameField>
        <displayFormat>CTA-{00000}</displayFormat>
        <label>Training Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>