OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <formula>Vendor_Training_Requirement__r.External_Course_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Code</label>
    <type>Text</type>
</CustomField>