OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <formula>Vendor_Training_Requirement__r.External_Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>