OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned__c</fullName>
    <label>Date Assigned</label>
    <type>DateTime</type>
</CustomField>