OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <label>Date Completed</label>
    <type>DateTime</type>
</CustomField>