OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Is_Canonical__c.field-meta.xml
<CustomField>
    <fullName>Is_Canonical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Canonical</label>
    <type>Checkbox</type>
</CustomField>