OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Last_Updated_By_System__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By_System__c</fullName>
    <label>Last Updated By System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Last_Updated_By_System</valueSetName>
    </valueSet>
</CustomField>