OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Merged_On__c.field-meta.xml
<CustomField>
    <fullName>Merged_On__c</fullName>
    <label>Merged On</label>
    <type>DateTime</type>
</CustomField>