OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipName>Contact_Training_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>