OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Training_Code__c.field-meta.xml
<CustomField>
    <fullName>Training_Code__c</fullName>
    <formula>Vendor_Training_Requirement__r.Training_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Code</label>
    <type>Text</type>
</CustomField>