OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Training_System__c.field-meta.xml
<CustomField>
    <fullName>Training_System__c</fullName>
    <formula>Vendor_Training_Requirement__r.Training_System__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training System</label>
    <type>Text</type>
</CustomField>