OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Unique_Assignment_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Assignment_Key__c</fullName>
    <externalId>true</externalId>
    <label>Unique Assignment Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>