OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/fields/Vendor_Training_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Training_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Training Requirement</label>
    <referenceTo>Training_Requirement__c</referenceTo>
    <relationshipName>Contact_Training_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>