OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/validationRules/Must_Be_Linked_to_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Be_Linked_to_Contact</fullName>
    <active>true</active>
    <description>Contact Linking Validation Rule</description>
    <errorConditionFormula>ISBLANK(Contact__c)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Training Assignment must be linked to a Contact.</errorMessage>
</ValidationRule>