OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/validationRules/Must_Be_Linked_to_Training_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Be_Linked_to_Training_Requirement</fullName>
    <active>true</active>
    <description>Training Assignment must be linked to Training Requirement</description>
    <errorConditionFormula>ISBLANK( Vendor_Training_Requirement__c )</errorConditionFormula>
    <errorDisplayField>Vendor_Training_Requirement__c</errorDisplayField>
    <errorMessage>Training Assignment must be linked to a Training Requirement.</errorMessage>
</ValidationRule>