OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/validationRules/Status_Requires_Completion_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Requires_Completion_Date</fullName>
    <active>true</active>
    <description>Completed Training Assignments Must Have a Completed Date.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Completed&quot;),
  ISBLANK( Date_Completed__c )
)</errorConditionFormula>
    <errorDisplayField>Date_Completed__c</errorDisplayField>
    <errorMessage>Completion Date must be filled when status is Completed.</errorMessage>
</ValidationRule>