OnboardingV2Minimal/force-app/main/default/objects/Training_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Course_Code__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Date_Assigned__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Status__c</columns>
    <columns>Onboarding__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>